--- a/themes/development/layouts/_default/index.html
+++ b/themes/development/layouts/_default/index.html
@@ -1,6 +1,6 @@
 {{ define "header" }}
     {{ readFile "/themes/production/static/images/logo.svg" | safeHTML }}
-    <img class="hero__image" src="/image/splash/{{ .Params.splash.filename_disk }}">
+    <img class="hero__image" src="https://res.cloudinary.com/thomasazar/image/upload/c_scale,h_1000,f_auto/thomasazar.net/{{ .Params.splash.filename_disk }}">
     <section class="hero__news">
         {{ range .Params.content.blocks }}
             {{ partial (printf "blocks/%s" .type) .data }}
