--- a/themes/production/layouts/_default/baseof.html
+++ b/themes/production/layouts/_default/baseof.html
@@ -33,6 +33,8 @@
     <meta name="msapplication-config" content="/browserconfig.xml">
     <!-- ****** faviconit.com favicons ****** -->
 
+    {{ if eq .Title "Harry Clarke" }}{{ partial "meta" . }}{{ end }}
+
     {{ $baguetteBox := resources.Get "scripts/vendor/baguetteBox.js" }}
     {{ $smoothScroll := resources.Get "scripts/vendor/smooth-scroll.js" }}
     {{ $vhCheck := resources.Get "scripts/vendor/vh-check.min.js" }}
