Add period at the end.

--- a/themes/production/layouts/partials/meta.html
+++ b/themes/production/layouts/partials/meta.html
@@ -1,17 +1,17 @@
  <!-- Primary Meta Tags -->
  <meta name="title" content="{{ .Title }} | {{ site.Title }}">
- <meta name="description" content="Thomas Azar stars in Harry Clarke at The Warehouse Theatre">
+ <meta name="description" content="Thomas Azar stars in Harry Clarke at The Warehouse Theatre.">
 
  <!-- Open Graph / Facebook -->
  <meta property="og:type" content="website">
  <meta property="og:url" content="https://www.thomasazar.net/harry-clarke/">
  <meta property="og:title" content="{{ .Title }} | {{ site.Title }}">
- <meta property="og:description" content="Thomas Azar stars in Harry Clarke at The Warehouse Theatre">
+ <meta property="og:description" content="Thomas Azar stars in Harry Clarke at The Warehouse Theatre.">
  <meta property="og:image" content="{{ site.Params.image.meta }}/meta_rc9cpx">
 
  <!-- Twitter -->
  <meta property="twitter:card" content="summary_large_image">
  <meta property="twitter:url" content="https://www.thomasazar.net/harry-clarke/">
  <meta property="twitter:title" content="{{ site.Title }}">
- <meta property="twitter:description" content="Thomas Azar stars in Harry Clarke at The Warehouse Theatre">
+ <meta property="twitter:description" content="Thomas Azar stars in Harry Clarke at The Warehouse Theatre.">
  <meta property="twitter:image" content="{{ site.Params.image.meta }}/meta_rc9cpx">
